# dbnl_bear

./: MANIFEST.in  README.md  example_1.ipynb  pyproject.toml  requirements.txt  setup.py  test.docx  test.ipynb
dbnl_bear/: __init__.py  ai_read.py  cli.py  overview.py  parse.py  processing.py  token_cost.py
dbnl_xml/: _lev021leve01_01.xml
notebook/: consolidated_relevant_passages.txt  filtered_texts_1600_1700.csv  poezie.csv  setup.py  test.ipynb  tulp.ipynb
notebook/dbnl_txt_files/: _lev021leve01.txt  bale003slav01.txt  wicq003fran01.txt
notebook/dbnl_xml/: bale003slav01_01.xml  wicq003fran01_01.xml
notebook/tulips/: aker002clee01.txt  ampz001besc01.txt  ampz001hoog01.txt  ampz001klae01.txt  ampz001nasz01.txt  ampz001rijm01.txt  ampz001west01.txt  barl001poem01.txt  baro004leyt01.txt  bata003nieu01.txt  baud002afbe01.txt  baud002morg01.txt  baud004edip01.txt  beer014ghee01.txt  beve001scha01.txt  bien002hand01.txt  bien002prof02.txt  blas001fida01.txt  bode001goud01.txt  boel009onee01.txt  boey001nieu01.txt  bolo001ghee01.txt  bols002duyf02.txt  borc002brus01.txt  born006gees01.txt  bors001denb01.txt  bors001stra01.txt  bosc015kons01.txt  bosc015poet01.txt  bour004desw01.txt  boxh002embl02.txt  brau007scha01.txt  bred001chak02.txt  bred001gees01.txt  bred001rodd02.txt  bred001spaa09.txt  breu004cupi01.txt  breu004lust01.txt  brug061chri01.txt  brun001clda01.txt  (+280 more)
statenvertaling_relevant_passages/: _sta001stat02.txt_relevant.txt
